fixed some CSS spacing issues

--- a/src/components/Plan/Group/group.css
+++ b/src/components/Plan/Group/group.css
@@ -41,7 +41,7 @@
   width: 25.125rem;
   height: 300px;
   z-index: 1;
-  transform: translate3d(821px, 6px, 0px);
+  transform: translate3d(820px, 6px, 0px);
   background-color: #e3d1a7;
   transition: 1s;
 }
